# visistruct

./: .flake8  LICENSE  README.md  pyproject.toml  run.sh
src/visistruct/: __init__.py  visistruct.py
tests/: test_visistruct.py
